# opossum.lib.py

./: .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  build.py  flake.nix  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: build-and-e2e-test.yml  build_executable.yml  flake.yml  lint_and_run_tests.yml  publish-release.yml  reuse.yml  run_tests.yml
.reuse/: dep5
scripts/: linter_and_formatting.sh
src/opossum.lib.py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/opossum_lib/: attribution_generation.py  cli.py  constants.py  file_generation.py  graph_generation.py  helper_methods.py  merger.py  opossum_file.py  opossum_generator.py  opossum_model.py  tree_generation.py
src/opossum_lib/core/: input_file.py  input_format_reader.py  input_reader.py  opossum_generation_arguments.py  opossum_generator.py  opossum_model.py
src/opossum_lib/core/entities/: base_url_for_sources.py  external_attribution_source.py  frequent_license.py  metadata.py  opossum.py  opossum_generation_arguments.py  opossum_model.py  opossum_package.py  resource.py  scan_results.py  source_info.py
src/opossum_lib/core/services/: generate_impl.py  input_format_reader.py  input_reader.py  merge_opossums.py  opossum_file_writer.py  opossum_generator.py  write_opossum_file.py
src/opossum_lib/input_formats/opossum/: constants.py  opossum_file_content.py  opossum_file_reader.py  opossum_file_writer.py  (+2 more)
src/opossum_lib/opossum/: constants.py  file_generation.py  merger.py  opossum_file.py  opossum_file_content.py  opossum_file_to_opossum_converter.py  opossum_file_writer.py  opossum_format_reader.py  output_model.py  read_opossum_file.py
src/opossum_lib/opossum_file_model/: opossum_file.py  opossum_file_content.py  opossum_file_writer.py
src/opossum_lib/scancode/: convert_scancode_to_opossum.py  helpers.py  model.py  resource_tree.py  scancode_data_to_opossum_converter.py  scancode_format_reader.py
src/opossum_lib/spdx/: attribution_generation.py  constants.py  convert_to_opossum.py  graph_generation.py  helper_methods.py  tree_generation.py
tests/: conftest.py  helper_methods.py  test_attribution_creation.py  test_cli.py  test_file_generation.py  test_graph_generation.py  test_hello_world.py  test_helper_methods.py  test_merge.py  test_opossum_file.py  test_opossum_model.py  test_tree_generation.py
tests/core/: test_opossum_model.py
tests/core/entities/: test_opossum.py
tests/core/services/: test_merge_opossums.py  test_opossum_file_writer.py  test_write_opossum_file.py
tests/data/: SPDX.spdx  SPDXLite.spdx  expected_opossum.json  expected_scancode.json  opossum_input.opossum  opossum_input_with_result.opossum  opossum_output.json  scancode.json  scancode_input.json
tests/opossum_model_generators/: external_attribution_source_provider.py  metadata_provider.py  opossum_provider.py  package_provider.py  resource_provider.py  scan_results_provider.py  source_info_provider.py
tests/setup/: opossum_faker_setup.py  opossum_file_faker_setup.py  scancode_faker_setup.py
tests/shared/: comparison_helpers.py  generator_helpers.py
tests/test_opossum/: test_conversion_roundtrip.py  test_convert_internal_model_to_opossum_file.py  test_file_generation.py  test_merge.py  test_opossum_file.py  test_opossum_file_to_opossum_converter.py  test_read_opossum_file.py
tests/test_opossum/generators/: generate_file_information.py  generate_opossum_file_content.py  generate_outfile_information.py  helpers.py
tests/test_scancode/: model_helpers.py  test_convert_scancode_to_opossum.py  test_get_attribution_info.py  test_resource_tree.py
tests/test_scancode/generators/: generate_scancode_file.py  helpers.py
tests/test_setup/: faker_setup.py  opossum_faker_setup.py  opossum_file_faker_setup.py  scancode_faker_setup.py
tests/test_spdx/: test_attribution_creation.py  test_extract_opossum_information_from_spdx.py  test_graph_generation.py  test_helper_methods.py  test_tree_generation.py
(+48 files in other folders)
