# SPDX-FileCopyrightText: 2023 TNG Technology Consulting GmbH <https://www.tngtech.com>
#
# SPDX-License-Identifier: Apache-2.0
[project]
name = "opossum.lib.py"
version = "0.1"
description = "A library for handling Opossum files with Python"
requires-python = ">=3.12,<4"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "spdx-tools>=0.8.3,<0.9",
    "networkx~=3.0",
    "click>=8.1.8,<9",
]

[project.urls]
Repository = "https://github.com/opossum-tool/opossum.lib.py"

[project.scripts]
spdx2opossum = "opossum_lib.cli:spdx2opossum"

[dependency-groups]
test = ["pytest>=8.3.4,<9"]
dev = [
    "black>=24.8.0,<25",
    "isort>=5.13.2,<6",
    "flake8>=7.1.1,<8",
    "mypy>=1.14.1,<2",
    "pre-commit>=4.0.1,<5",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]
package = true

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    'networkx.*',
    'license_expression.*'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
