# SPDX-FileCopyrightText: TNG Technology Consulting GmbH <https://www.tngtech.com>
#
# SPDX-License-Identifier: Apache-2.0
[project]
name = "opossum-file"
version = "0.1"
description = "A cli tool for handling Opossum files"
requires-python = ">=3.13,<4"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "spdx-tools>=0.8.3,<0.9",
    "networkx~=3.4",
    "click>=8.1.8,<9",
    "pydantic>=2.10.5",
    "pyinstaller>=6.11.1",
    "faker>=35.0.0",
]

[project.urls]
Repository = "https://github.com/opossum-tool/opossum-file"

[project.scripts]
opossum-file = "opossum_lib.cli:opossum_file"

[dependency-groups]
test = ["pytest>=8.3.4,<9"]
dev = [
    "mypy>=1.14.1,<2",
    "pre-commit>=4.1.0,<5",
    "ruff>=0.9.3",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]
package = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path='src:tests'
plugins = [
"pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    'networkx.*',
    'license_expression.*'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # naming
    "N"
]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
